--- a/pages/comptable/validate.html
+++ b/pages/comptable/validate.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GSB - Validation des fiches</title>
-    <link rel="stylesheet" href="../css/comptable.css">
+    <link rel="stylesheet" href="../../css/comptable.css">
 </head>
 <body>
     <nav class="nav">
