add image and change rep for css

--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 <body>
     <div class="container">
         <div class="left-panel">
-            <img src="pharmacy-office.jpg" alt="GSB Pharmacy Office" class="office-image">
+            <img src="public/images/home.png" alt="GSB Pharmacy Office" class="office-image">
         </div>
         <div class="right-panel">
             <h1>Bienvenue sur GSB</h1>
             <p class="subtitle">Veuillez selectionner votre interface de connexion</p>
-            
             <div class="button-container">
                 <a href="pages/auth/connexion.html" class="button">Visiteur médical</a>
                 <a href="pages/auth/connexion.html" class="button">Comptable</a>
