--- a/pages/auth/connexion.html
+++ b/pages/auth/connexion.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GSB - Connexion</title>
-    <link rel="stylesheet" href="../../../css/connexion.css">
+    <link rel="stylesheet" href="../../../public/css/connexion.css">
 </head>
 <body>
     <div class="container">
         <div class="left-panel">
-            <img src="pharmacy-office.jpg" alt="GSB Pharmacy Office" class="office-image">
+            <img src="../../public/images/home.png" alt="GSB Pharmacy Office" class="office-image">
         </div>
         <div class="right-panel">
             <h1>Connexion</h1>
