--- a/pages/visiteur/list.html
+++ b/pages/visiteur/list.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consulter Fiche Frais</title>
-    <link rel="stylesheet" href="../../css/visiteur.css">
+    <link rel="stylesheet" href="../../public/css/visiteur.css">
 </head>
 <body>
     <nav>
