php to html files

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <h1>Bienvenue sur GSB</h1>
             <p class="subtitle">Veuillez selectionner votre interface de connexion</p>
             <div class="button-container">
-                <a href="pages/auth/connexion.html" class="button">Visiteur médical</a>
-                <a href="pages/auth/connexion.html" class="button">Comptable</a>
+                <a href="pages/auth/connexion-visiteur.html" class="button">Visiteur médical</a>
+                <a href="pages/auth/connexion-comptable.html" class="button">Comptable</a>
             </div>
         </div>
     </div>
