--- a/pages/auth/connexion-comptable.html
+++ b/pages/auth/connexion-comptable.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GSB - Connexion</title>
-    <link rel="stylesheet" href="../../../public/css/connexion.css">
+    <link rel="stylesheet" href="../../public/css/connexion.css">
 </head>
 <body>
     <div class="container">
@@ -14,15 +14,16 @@
         <div class="right-panel">
             <h1>Connexion</h1>
             
-            <form class="login-form">
+            <!-- Version Pour PHP: <form class="login-form" method="POST" action=""> -->
+            <form class="login-form" method="GET" action="/pages/comptable/dashboard.html">
                 <div class="form-group">
-                    <input type="email" id="email" placeholder="Email" required>
+                    <input type="email" name="email" id="email" placeholder="Email" required>
                 </div>
                 <div class="form-group">
-                    <input type="password" id="password" placeholder="Password" required>
+                    <input type="password" name="password" id="password" placeholder="Password" required>
                 </div>
                 <div class="form-group checkbox">
-                    <input type="checkbox" id="remember">
+                    <input type="checkbox" name="remember" id="remember">
                     <label for="remember">Rester connecter</label>
                 </div>
                 <button type="submit" class="connect-button">se connecter</button>
