--- a/pages/visiteur/form.html
+++ b/pages/visiteur/form.html
@@ -49,7 +49,7 @@
         </div>
 
         <div class="card">
-            <h3>Ajouter un frais hors forfait</h3>
+            <h3 style="margin-bottom: 15px;"> hors forfait</h3>
             <div class="grid">
                 <input type="date" id="date" required>
                 <input type="text" id="libelle" placeholder="Libellé" required>
