--- a/pages/comptable/payments.html
+++ b/pages/comptable/payments.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     <nav class="nav">
-        <a href="dashboard.html">Accueil</a>
-        <a href="validate.html">Valider les fiches</a>
-        <a href="payments.html">Suivi des paiements</a>
+        <div>
+            <a href="dashboard.html">Accueil</a>
+            <a href="validate.html">Valider les fiches</a>
+            <a href="payments.html" class="active">Suivi des paiements</a>
+        </div>
+        <img class="svg" src="../../public/images/logout.svg" alt="logout">
     </nav>
 
     <div class="container">
