--- a/pages/visiteur/list.html
+++ b/pages/visiteur/list.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <nav>
-        <a href="form.html">Renseigner Fiche Frais</a>
-        <a href="list.html" class="active">Consulter Fiche Frais</a>
+        <div>
+            <a href="form.html">Renseigner Fiche Frais</a>
+            <a href="list.html" class="active">Consulter Fiche Frais</a>
+        </div>
+        <img class="svg" src="../../public/images/logout.svg" alt="logout">
     </nav>
 
     <div class="container">
