add default folder

--- a/pages/auth/connexion-visiteur.html
+++ b/pages/auth/connexion-visiteur.html
@@ -15,7 +15,7 @@
             <h1>Connexion</h1>
             
             <!-- Version Pour PHP: <form class="login-form" method="POST" action=""> -->
-            <form class="login-form" method="GET" action="/pages/visiteur/form.html">
+            <form class="login-form" method="GET" action="/GSB/pages/visiteur/form.html">
                 <div class="form-group">
                     <input type="email" name="email" id="email" placeholder="Email" required>
                 </div>
