Ajout du login et PDO dans comptable

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p class="subtitle">Veuillez selectionner votre interface de connexion</p>
             <div class="button-container">
                 <a href="pages/auth/connexion-visiteur.php" class="button">Visiteur médical</a>
-                <a href="pages/auth/connexion-comptable.html" class="button">Comptable</a>
+                <a href="pages/auth/connexion-comptable.php" class="button">Comptable</a>
             </div>
         </div>
     </div>
