--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <div class="right-panel">
             <h1>Bienvenue sur GSB</h1>
-            <p class="subtitle">Veuillez selectionner votre interface de connexion</p>
+            <p class="subtitle">Veuillez selectionner votre interface de connexion.</p>
             <div class="button-container">
                 <a href="pages/auth/connexion-visiteur.php" class="button">Visiteur médical</a>
                 <a href="pages/auth/connexion-comptable.php" class="button">Comptable</a>
